crates/plotnik-lib/tests/04-emit/anchors/strict_anchor_only_impossible.txt
Q = (array .!)
------------------ DIAGNOSTICS -------------------
error: with strict adjacency (`.!`), no `array` places this child first; an `array` begins with `"["`
 --> query.ptk:1:6
  |
1 | Q = (array .!)
  |      ^^^^^
  |
help: `.!` allows nothing between — not even anonymous tokens or comments; the soft anchor `.` skips those: `(array .)`
